# fe2o3

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
boot/: header.asm  setup.asm
iso/boot/: .gitignore
iso/boot/grub/: grub.cfg
src/: int.rs  lib.rs  log.rs  panic.rs  serial.rs  test_fw.rs  vga.rs
src/boot/: check.asm  long.asm  main.asm  memory.asm
