[package]
name = "fe2o3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


[lib]
crate-type = ["staticlib"]


[features]
default = []
tests = []


[dependencies]
volatile = "0.4.5"
spin = "0.9.3"
x86_64 = "0.14.9"
uart_16550 = "0.2.10"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.2"
